# rpicam-apps

./: .gitignore  README.md  meson.build  meson_options.txt  micropiscope.md
apps/: meson.build  micropiscope.cpp
preview/: egl_preview.cpp  meson.build  preview.cpp
utils/: micropiscope.desktop  unclutter.desktop
